force-app/main/default/objects/Contact/fields/Birthplace__c.field-meta.xml
<CustomField>
    <fullName>Birthplace__c</fullName>
    <inlineHelpText>Country of birth.</inlineHelpText>
    <label>Birthplace</label>
    <length>50</length>
    <type>Text</type>
</CustomField>