force-app/main/default/objects/Contact/fields/English_Language_Proficiency__c.field-meta.xml
<CustomField>
    <fullName>English_Language_Proficiency__c</fullName>
    <label>English Language Proficiency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>