force-app/main/default/objects/Contact/fields/UCI__c.field-meta.xml
<CustomField>
    <fullName>UCI__c</fullName>
    <description>Unique client identifier, given by the government of Canada to individuals applying for permits, residency, and citizenship.</description>
    <inlineHelpText>Unique client identifier, given by the government of Canada to individuals applying for permits, residency, and citizenship.</inlineHelpText>
    <label>UCI</label>
    <length>15</length>
    <type>Text</type>
</CustomField>